Make sure flex slider also shows content on small screens #4

--- a/css/style.css
+++ b/css/style.css
@@ -3919,8 +3919,12 @@ body.boxed .body{
 	.header-style2 .hero-slider, .header-style3 .hero-slider, .header-style2 .hero-slider.flexslider ul.slides li, .header-style3 .hero-slider.flexslider ul.slides li, .header-style2 .flex-caption-cell, .header-style3 .flex-caption-cell{
 		height:250px;
 	}
-	.flex-caption{
-		display:none;
+	.flex-caption h2 {
+		font-size: 36px;
+		margin-bottom: 15px;
+	}
+	.flex-caption-text p {
+		margin-bottom: 15px;
 	}
 	.copyrights-col-left{
 		margin-bottom:15px;
